--- a/style.scss
+++ b/style.scss
@@ -162,7 +162,9 @@ img {
     text-align: center;
   }
 }
-
+header {
+	 background-image: url('https://images.unsplash.com/photo-1460602594182-8568137446ce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjIzNTA3fQ&s=0177c0a19daa5645842c6c2f9a61ae50&auto=format&fit=crop&w=1955&q=80');
+}
 .site-avatar {
   float: left;
   width: 70px;
