--- a/style.scss
+++ b/style.scss
@@ -165,6 +165,11 @@ img {
 header {
 	 background-color: Tomato;
 }
+
+footer {
+	Background-color: Tomato;
+}
+
 .site-avatar {
   float: left;
   width: 70px;
