--- a/style.scss
+++ b/style.scss
@@ -18,12 +18,13 @@ html {
 }
 
 body {
-	background: #123456;
+	background: #FFFFFF;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
 
 .container {
+	background-color: Tomato;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
@@ -280,8 +281,8 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #FFFFFF;
+  border-bottom: 1px solid #FFFFFF;
   background-color: $lightGray;
 }
 
