--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ body {
 }
 
 .container {
+	opacity: 0.5;
 	background-color: Tomato;
   margin: 0 auto;
   max-width: 740px;
@@ -70,7 +71,7 @@ p {
 }
 
 a {
-  color: $blue;
+  color: #FFFFFF;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
@@ -164,15 +165,16 @@ img {
   }
 }
 header {
-	 background-color: Tomato;
+	 background-color: DeepSeaGreen;
 }
 
 footer {
-	Background-color: Tomato;
+	Background-color: DeepSeaGreen;
 }
 
+
 .site-avatar {
-  float: left;
+  float: right;
   width: 70px;
   height: 70px;
   margin-right: 15px;
