--- a/style.scss
+++ b/style.scss
@@ -171,6 +171,9 @@ header {
 footer {
 	Background-color: DeepSeaGreen;
 }
+background-image {
+	("http://www.fg-a.com/wallpapers/black-background-retro.jpg")
+}
 
 
 .site-avatar {
