--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: ("http://www.fg-a.com/wallpapers/black-background-retro.jpg");
+	background-image: http://www.fg-a.com/wallpapers/black-background-retro.jpg ;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
