--- a/style.scss
+++ b/style.scss
@@ -16,13 +16,13 @@
 html {
   font-size: 100%;
 }
-<style>
+
 body {
-	background-image:("http://www.fg-a.com/wallpapers/black-background-retro.jpg") ;
+	background-image: url("http://www.fg-a.com/wallpapers/black-background-retro.jpg") ;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
-<style>
+
 .container {
 	opacity: 0.5;
 	background-color: Tomato;
