--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-	opacity: 0.7;
+	opacity: 0.9;
 	background-color: Tomato;
   margin: 0 auto;
   max-width: 740px;
@@ -176,7 +176,7 @@ footer {
 
 
 .site-avatar {
-  float: right;
+  float: middle;
   width: 70px;
   height: 70px;
   margin-right: 15px;
