--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,6 @@ body {
 }
 
 .container {
-	opacity: 0.9;
 	background-color: Tomato;
   margin: 0 auto;
   max-width: 740px;
@@ -176,7 +175,7 @@ footer {
 
 
 .site-avatar {
-  float: middle;
+  float: left;
   width: 70px;
   height: 70px;
   margin-right: 15px;
