--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-	background-color: Tomato;
+	background-color: DeepSeaGreen;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
