--- a/style.scss
+++ b/style.scss
@@ -101,10 +101,12 @@ ul ul, ol ul {
 
 em, i {
   font-style: italic;
+	  color:#FFFFFF;
 }
 
 strong, b {
   font-weight: bold;
+	color:#FFFFFF;
 }
 
 img {
