--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
 .container {
 	
 opacity:1.0;
-	background-color: DeepSeaGreen;
+	background-color: MediumSeaGreen;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
@@ -168,11 +168,11 @@ img {
   }
 }
 header {
-	 background-color: DeepSeaGreen;
+	 background-color: MediumSeaGreen;
 }
 
 footer {
-	Background-color: DeepSeaGreen;
+	Background-color: MediumSeaGreen;
 }
 
 
