--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("http://www.fg-a.com/wallpapers/black-background-retro.jpg") ;
+	background-image: url("http://img.mi9.com/other/5028/neon-wallpaper-abstract-blue-background-1920x1200.jpg_1920x1200_94706.jpg") ;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
