--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,8 @@ html {
 }
 
 body {
-	background-image: url("http://img.mi9.com/other/5028/neon-wallpaper-abstract-blue-background-1920x1200.jpg_1920x1200_94706.jpg") ;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+padding:0em 0.2em 0em 0.2em;
+display:inline-block;
 }
 
 .container {
