--- a/style.scss
+++ b/style.scss
@@ -126,7 +126,7 @@ img {
 }
 ::selection {
   color: $black;
-  background-image: ("http://www.fg-a.com/wallpapers/black-background-retro.jpg");
+  background-image: ("https://www.fg-a.com/wallpapers/white-stone-1280.jpg");
 }
 
 // Nicolas Gallagher's micro clearfix hack
