--- a/style.scss
+++ b/style.scss
@@ -17,12 +17,17 @@ html {
   font-size: 100%;
 }
 
-table, th, td {
-   border: 1px solid black;
-}
 
 body {
 	background-image: ("https://www.fg-a.com/wallpapers/white-stone-1280.jpg");
+}
+
+table {
+	border-collapse;
+}
+
+table, th, td {
+   border: 1px solid black;
 }
 
 .container {
