--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,10 @@ html {
 
 
 body {
-	background-image: ("https://www.fg-a.com/wallpapers/white-stone-1280.jpg");
+	 border: 1px solid black
+    background-image: url(https://i.stack.imgur.com/5lZ44.jpg);
+    background-repeat: no-repeat
+    background-size: auto;
 }
 
 table {
