--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
 	 border: 1px solid black
-    background-image: url("https://i.stack.imgur.com/5lZ44.jpg)";
+    background-image: url("https://i.stack.imgur.com/5lZ44.jpg");
     background-repeat: no-repeat
     background-size: auto;
 }
