--- a/style.scss
+++ b/style.scss
@@ -19,9 +19,9 @@ html {
 
 
 body {
-	 border: 1px solid black
+	 border: 1px solid black;
     background-image: url("https://i.stack.imgur.com/5lZ44.jpg");
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
     background-size: auto;
 }
 
