--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
 	 border: 1px solid black;
-    background-image: url("https://i.stack.imgur.com/5lZ44.jpg");
+    background-image: url("http://urubyiruko.org/uploads/images/backgrounds/green-textured-background-pattern.jpg");
     background-repeat: no-repeat;
     background-size: auto;
 }
@@ -35,7 +35,7 @@ table, th, td {
 
 .container {
 	
-opacity:0.5;
+opacity:0.9;
 	background-color: MediumSeaGreen;
   margin: 0 auto;
   max-width: 740px;
