--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ table, th, td {
 .container {
 	
 opacity:0.9;
-	background-color: MediumSeaGreen;
+	backgroind-color: DodgerBlue;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
