--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
 	 border: 1px solid black;
     background-image: url("http://urubyiruko.org/uploads/images/backgrounds/green-textured-background-pattern.jpg");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 table {
