--- a/style.scss
+++ b/style.scss
@@ -37,10 +37,9 @@ table {
     width: 100%;
 }
 
-.container {
-	
-opacity:0.9;
-	backgroind-color: DodgerBlue;
+container {
+	opacity: 0.9;
+	background-color: DodgerBlue;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
