--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
 	 border: 1px solid black;
-    background-image: url("https://www.google.co.uk/search?q=jpg+background&rlz=1C9BKJA_enGB803GB803&oq=jpg+&aqs=chrome.0.69i59j0j5j69i57j69i60l2.2777j0j7&hl=en-GB&sourceid=chrome-mobile&ie=UTF-8#imgrc=NK8qTMy5cMCjmM:");
+    background-image: url("https://www.cmi.ac.in/~hrishikeshrt/share/wallpapers/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
